--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://api.map.baidu.com/api?v=3.0&ak=2asgOGX9389GwDcrW5danYApPl3ydwlL"></script>
   </body>
 </html>
